# zuljin-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: cargo.yml  ghcr.yml
src/: bucket.rs  client.rs  http.rs  main.rs  meta.rs  utils.rs
