[package]
name = "zuljin-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.5", features = ["limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
infer = "0.19.0"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
axum-test = "19"
