[package]
name = "zuljin-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.51.1", features = ["full"] }
tower-http = { version = "0.6", features = ["limit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
infer = "0.19.0"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = ["multipart", "json"] }
mime_guess = "2"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"
axum-test = "20"
